# flask_main.py
@@ -6,6 +6,7 @@ from src.flask_api.members import members_router
 from src.flask_api.reservations import reservations_router
 from src.flask_api.attendances import attendances_router
 from src.swagger.flask_main import swagger_bp
+from src.flask_api.groups import groups_router
 
 
 app = Flask(__name__)
@@ -17,6 +18,7 @@ app.register_blueprint(swagger_bp, url_prefix="/api/swagger")
 app.register_blueprint(members_router, url_prefix="/api/members")
 app.register_blueprint(reservations_router, url_prefix="/api/reservations")
 app.register_blueprint(attendances_router, url_prefix="/api/attendances")
+app.register_blueprint(groups_router, url_prefix="/api/groups")
 
 
 # app exit handler
